--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ _body.appendChild(_coverElement);</pre>
                                 term definition
                             </dd>
                             <dt>
-                                Алюминий (<sub>au</sub>Al<sup>hr+</sup> или <abbr title="тяжелоя вода">SSH</abbr>)
+                                Тяжёлая вода (также <abbr title="оксид дейтерия">OD</abbr>) D<sub>2</sub>O или <sup>2</sup>H<sub>2</sub>O.  - имеет плотность 1104,2 кг/м<sup>3</sup>, жидкость
                             </dt>
                             <dd>
                                 &mdash; вещество получаемое синтетическим путем а производственных масштабах с 1942 года. <acronym title="В отличие от аббревиатуры, акроним — это устоявшееся сокращение, которое применяется как самостоятельное слово.">АККРОНим</acronym>
@@ -210,11 +210,11 @@ _body.appendChild(_coverElement);</pre>
                         <form action="search_submit" method="get" accept-charset="utf-8">
                             <div class="form-row">
                                 <label for="main-search">Search with autocomplete</label>
-                            	<input name="search" results="5" type="search" id="main-search" />
+                                <input name="search" results="5" type="search" id="main-search" />
                             </div>
                             <div class="form-row">
                                 <label for="default-html5-search">Default Search</label>
-                            	<input name="search" type="search" id="default-html5-search" />
+                                <input name="search" type="search" id="default-html5-search" />
                             </div>
                         </form>
                         <form action="login_submit" method="get" accept-charset="utf-8">
@@ -225,8 +225,7 @@ _body.appendChild(_coverElement);</pre>
                                     <input type="text" id="name" name="name" placeholder="placeholder login" />
                                 </div>
                                 <div class="form-row">
-                                    <input type="password" style="display: none;" tabindex="0" accesskey="" />
-                                    <input name="password_" id="password_" type="text" autocomplete="off" />
+                                    <input id="password" name="password" required="required" type="password" placeholder="eg. X8df!90EO" />
                                 </div>
                                 <div class="form-row">
                                     <input type="button" value="Button" />
@@ -283,11 +282,11 @@ _body.appendChild(_coverElement);</pre>
                                 </label>
                                 <label>
                                     <input type="checkbox" name="checkbox2" value="ch2" disabled="disabled" />
-                                	Radio 2 (disabled)
+                                    Radio 2 (disabled)
                                 </label>
                                 <label>
                                     <input type="checkbox" name="checkbox3" value="ch3" />
-                                	Radio 3
+                                    Radio 3
                                 </label>
                             </div>
                             <div class="form-row">
