--- a/check.html
+++ b/check.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Weiss - swicc staic theme</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
-        <script src="js/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/jquery-1.7.2.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
         <!--[if lt IE 9]>
         <link href="css/ie-old.css" rel="stylesheet" type="text/css" />
@@ -38,8 +38,8 @@
                     <div class="right-side">
                         <a href="mailto:weiss@mail.com">weiss@mail.com</a>
                     </div>
-                    <nav role="navigation">
-                        <ul id="nav">
+                    <nav>
+                        <ul id="nav" role="navigation">
                             <li>
                                 <a href="#" id="twocolumn-f">2 columns: sidebar-first</a>
                             </li>
@@ -247,7 +247,7 @@ _body.appendChild(_coverElement);</pre>
                                 <input type="text" id="name" name="name" required />
                             </div>
                             <div class="form-row">
-                                <label for="select">Select</label>
+                                <label for="select">Раскрывающийся список</label>
                                 <select name="select" id="select">
                                     <optgroup label="Группа 1">
                                         <option value="c1">Выбор 1</option>
@@ -259,6 +259,17 @@ _body.appendChild(_coverElement);</pre>
                                         <option value="s2">Выбор 5</option>
                                         <option value="s3">выбор 5</option>
                                     </optgroup>
+                                </select>
+                            </div>
+                            <div class="form-row">
+                                <label for="select-openend">Список множественного выбора</label>
+                                <select name="select-openend" id="select-openend" multiple="multiple" size="4">
+                                    <option selected="selected" value="c1">Выбор 1</option>
+                                    <option value="c2">Выбор 2</option>
+                                    <option value="c3">Длинный длинный длинный выбор</option>
+                                    <option value="s1">Выбор 4</option>
+                                    <option value="s2">Выбор 5</option>
+                                    <option value="s3">выбор 5</option>
                                 </select>
                             </div>
                             <div class="form-row">
@@ -331,19 +342,19 @@ _body.appendChild(_coverElement);</pre>
                 <div id="under-content">
                     <div>
                         <style type="text/css">
-                            #under-content {
-                                overflow: hidden;
-                                clear: both;
-                            }
+                          #under-content {
+                            overflow: hidden;
+                            clear: both;
+                          }
 
-                            #under-content [class*="span"] {
-                                background-color: #EEE;
-                                text-align: center;
-                                border-radius: 3px;
-                                min-height: 30px;
-                                line-height: 30px;
-                                margin-bottom: 1em;
-                            }
+                          #under-content [class*="span"] {
+                            background-color: #EEE;
+                            text-align: center;
+                            border-radius: 3px;
+                            min-height: 30px;
+                            line-height: 30px;
+                            margin-bottom: 1em;
+                          }
                         </style>
                         <div class="grid-row">
                             <div class="gr-cell span1">
